# rcabench-platform

./: .gitignore  .pre-commit-config.yaml  ARTIFACT_OVERVIEW.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  justfile  main.py  mypy.ini  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
cli/: README.md  check_traces.py  dataset_analysis.py  detector.py  export.py  make_eadro.py  make_nezha.py  make_rcabench.py  make_rcabench_filtered.py  make_rcabench_with_issues.py  make_rcaeval.py  nfs_migration.py  prepare_inputs.py  rcaeval_upload.py  scan_datasets.py  scan_outputs.py  test_build_image.py
cli/dataset_analysis/: ana_cli.py  check_traces.py  datapack_cli.py  dataset_analysis.py  detector_cli.py  metric_cli.py  scan_datasets.py  scan_outputs.py  vis.py  vis_cli.py  vis_marimo.py  visualize_dataset_filtering.py
cli/dataset_analysis/vis/: injections.py  models.py
cli/dataset_transform/: make_aiops21.py  make_eadro.py  make_metis.py  make_nezha.py  make_rcabench.py  make_rcabench_execption.py  make_rcabench_filtered.py  make_rcabench_qps.py  make_rcabench_return.py  make_rcabench_with_issues.py  make_rcaeval.py
cli/tests/: test_algorithm_execution.py  test_build_image.py  test_cloud.py  test_split_train_test.py
docker/clickhouse_dataset/: Dockerfile  cli.sh
docker/detector/: Dockerfile  cli.sh  entrypoint.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  EXAMPLES.md  FAQ.md  INSTALL.md  README.md  SECURITY.md  TROUBLESHOOTING.md  USER_GUIDE.md  docker-images.md  maintenance.md  package-restructuring-plan.md  specifications.md  workflow-references.md
docs/spec/: algorithms.md  datasets.md
infra/: README.md
infra/juicefs/: format.sh  mount.sh  umount.sh
infra/juicefs/grafana/provisioning/dashboards/: juicefs-dashboard.json  minio-dashboard.json
infra/minio/: docker-compose.yml  prometheus.yml
notebooks/: sdg.py
scripts/: docker.py  docker.sh  release-patch.sh
src/rcabench_platform/: __init__.py
src/rcabench_platform/v1/: logging.py
src/rcabench_platform/v1/algorithms/rcaeval/: _common.py  baro.py  nsigma.py
src/rcabench_platform/v1/algorithms/traceback/: a7.py
src/rcabench_platform/v1/cli/: eval.py  main.py  rcabench_.py  self_.py
src/rcabench_platform/v1/clients/: k8s.py  minio_.py  rcabench_.py
src/rcabench_platform/v1/graphs/sdg/: mcp_wrapper.py  statistics.py
src/rcabench_platform/v1/graphs/sdg/build_/: common.py  rcaeval.py
src/rcabench_platform/v1/sdk/: run_exp_platform.py
src/rcabench_platform/v1/spec/: algorithm.py  convert.py
src/rcabench_platform/v1/utils/: fs.py  serde.py
src/rcabench_platform/v2/: config.py  logging.py
src/rcabench_platform/v2/algorithms/rcaeval/: _common.py
src/rcabench_platform/v2/algorithms/traceback/: A10.py  A7.py  A8.py  A9.py  a7.py  a8.py
src/rcabench_platform/v2/analysis/: aggregation.py  algo_perf_vis.py  data_prepare.py  datapacks_analysis.py  datapacks_visualiaztion.py  detector_visualization.py
src/rcabench_platform/v2/cli/: container.py  eval.py  main.py  online.py  rcabench_.py  sample.py  sdg.py  self_.py
src/rcabench_platform/v2/clients/: clickhouse.py  k8s.py  rcabench_.py
src/rcabench_platform/v2/datasets/: rcabench.py  spec.py  train_ticket.py
src/rcabench_platform/v2/experiments/: report.py  single.py
src/rcabench_platform/v2/graphs/sdg/: defintion.py  mcp_wrapper.py  neo4j.py  statistics.py
src/rcabench_platform/v2/graphs/sdg/build_/: rcabench.py
src/rcabench_platform/v2/internal/clients/: k8s.py  rcabench_.py
src/rcabench_platform/v2/internal/cloud/: hf.py  minio_.py
src/rcabench_platform/v2/internal/metrics/: algo_metrics.py  metrics_calculator.py
src/rcabench_platform/v2/internal/metrics/ad/: factory.py
src/rcabench_platform/v2/internal/sources/: convert.py  rcabench.py
src/rcabench_platform/v2/metrics/: algo_metrics.py  metrics_calculator.py
src/rcabench_platform/v2/metrics/ad/: configs.py  presets.py
src/rcabench_platform/v2/pedestals/: registry.py  train_ticket.py
src/rcabench_platform/v2/samplers/: __init__.py  event_encoding.py  metrics_sli.py  path_encoding.py  random_.py  spec.py
src/rcabench_platform/v2/samplers/experiments/: batch.py  report.py  single.py  spec.py
src/rcabench_platform/v2/sdk/evaluation/: ranking.py
src/rcabench_platform/v2/sdk/experiments/: batch.py
src/rcabench_platform/v2/sdk/pedestals/: __init__.py  train_ticket.py
src/rcabench_platform/v2/sdk/utils/: dataframe.py
src/rcabench_platform/v2/sources/: convert.py  metis.py  rcabench.py  rcaeval.py
src/rcabench_platform/v2/tools/label/: app.py  config.py  data_loader.py  label_manager.py  logs_search.py  metrics_viz.py  traces_viz.py  utils.py
src/rcabench_platform/v2/utils/: dataframe.py  fmap.py
src/rcabench_platform/v3/analysis/: detector_visualization.py
src/rcabench_platform/v3/cli/: container.py  llm_eval.py  main.py  online.py  sample.py  self_.py  tools.py
src/rcabench_platform/v3/internal/clients/: k8s.py  rcabench_.py
src/rcabench_platform/v3/internal/cloud/: hf.py  minio_.py
src/rcabench_platform/v3/internal/metrics/: algo_metrics.py  metrics_calculator.py
src/rcabench_platform/v3/internal/sources/: convert.py
src/rcabench_platform/v3/sdk/algorithms/rcaeval/: baro.py  nsigma.py
src/rcabench_platform/v3/sdk/algorithms/traceback/: A7.py  A8.py  A9.py
src/rcabench_platform/v3/sdk/datasets/: rcabench.py
src/rcabench_platform/v3/sdk/evaluation/: __init__.py  causal_graph.py  rca_metrics.py
src/rcabench_platform/v3/sdk/experiments/: report.py
src/rcabench_platform/v3/sdk/graphs/networkx/: neo4j.py
src/rcabench_platform/v3/sdk/graphs/sdg/: defintion.py  dump.py  neo4j.py
src/rcabench_platform/v3/sdk/llm_eval/: README.md  __init__.py  example_config.yaml
src/rcabench_platform/v3/sdk/llm_eval/agents/: __init__.py  base_agent.py  cli_agent.py
src/rcabench_platform/v3/sdk/samplers/: metrics_sli.py  spec.py
src/rcabench_platform/v3/sdk/utils/: fmap.py  notify.py
src/rcabench_platform/v3/tools/label/: app.py  data_loader.py
(+44 files in other folders)
