[project]
name = "rcabench-platform"
version = "0.0.1"
description = "An experiment framework for Root Cause Analysis"
readme = "README.md"
authors = [
    { name = "Nugine", email = "xuyangwang@link.cuhk.edu.cn" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = [
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
]
ignore = ["UP038"]

[tool.pyright]
exclude = [ #
    ".git",
    "**/__pycache__",
    ".cache",
    ".idea",
    ".vscode",
    ".venv",
    ".devbox",
    "db/",
    "data/",
    "temp/",
    "logs/",
    "vendor/",
    "output/",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.11.10",
]
